# cotengra

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: pypi-release.yml  test.yml
ci/requirements/: mac.txt  py-base.yml  py-mac.yml  py-no-oe.yml  py-win.yml
cotengra/: .gitattributes  __init__.py  contract.py  core.py  core_multi.py  hyper.py  hyper_baytune.py  hyper_choco.py  hyper_nevergrad.py  hyper_optuna.py  hyper_random.py  hyper_skopt.py  hypergraph.py  interface.py  nodeops.py  oe.py  parallel.py  path_compressed.py  path_flowcutter.py  path_greedy.py  path_igraph.py  path_kahypar.py  path_labels.py  path_mcts.py  path_quickbb.py  plot.py  presets.py  reusable.py  schematic.py  scoring.py  slicer.py  tree.py  utils.py
cotengra/experimental/: __init__.py  hyper_de.py  hyper_pe.py  hyper_pymoo.py  hyper_scipy.py  hyper_smac.py  multi.ipynb  path_compressed_branchbound.py  path_compressed_mcts.py  scoring.py
cotengra/hyperoptimizers/: __init__.py  _param_mapping.py  hyper.py  hyper_baytune.py  hyper_choco.py  hyper_cmaes.py  hyper_es.py  hyper_neldermead.py  hyper_nevergrad.py  hyper_optuna.py  hyper_random.py  hyper_sbplex.py  hyper_sbplx.py  hyper_skopt.py
cotengra/pathfinders/: __init__.py  path_basic.py  path_compressed.py  path_compressed_greedy.py  path_edgesort.py  path_flowcutter.py  path_greedy.py  path_igraph.py  path_kahypar.py  path_kahypar_plus.py  path_labels.py  path_mcts.py  path_quickbb.py  path_random.py  path_simulated_annealing.py  treedecomp.py
docs/: advanced.ipynb  basics.ipynb  changelog.md  conf.py  contraction.ipynb  develop.md  high-level-interface.ipynb  index.md  index_examples.md  installation.md  trees.ipynb  visualization.ipynb
docs/_static/: my-styles.css
docs/examples/: ex_benchmarking.ipynb  ex_compressed_contraction.ipynb  ex_large_output_lazy.ipynb  ex_trace_contraction_to_matmuls.ipynb
docs/utils/: resolve_changelog.py
examples/: Example - Reproducing 2005.06787.ipynb  Example - Reproducing 2103-03074.ipynb  Quantum Circuit Example Old.ipynb  Quantum Circuit Example.ipynb  circuit_n53_m10_s0_e0_pABCDCDAB.qsim  circuit_n53_m12_s0_e0_pABCDCDAB.qsim  ex_jax.py  ex_mpi_executor.py  ex_mpi_spmd.py
examples/benchmarks/: cubic_6x6x10.json  mps_mpo_L100_chi64_D5.json  peps_cluster_r2_D10_a.json  qucirc_rrzz_n56_d13.json  rand_50_5_a.json  randreg_200_3_a.json  rtree_100_a.json  sycamore_n53_m20_s0_e0_pABCDCDAB.json
src/: lib.rs
tests/: test_backends.py  test_compressed.py  test_compute.py  test_contractors.py  test_core.py  test_hypergraph.py  test_interface.py  test_optimizers.py  test_parallel.py  test_paths_basic.py  test_slicer.py  test_tree.py
